Fix exanded row spacing. Update doc strings. Use a p for line-height.

--- a/jujugui/static/gui/src/app/components/budget-table/_budget-table.scss
+++ b/jujugui/static/gui/src/app/components/budget-table/_budget-table.scss
@@ -18,6 +18,10 @@
                 display: block;
             }
         }
+
+        .expanding-row__expanded {
+            margin-left: 0;
+        }
     }
 
     &__edit {
